# ps_sem_v

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: attach_package.cmake  create_library.cmake
libraries/: CMakeLists.txt  dummy.cpp  types.hpp
libraries/components/: CMakeLists.txt
libraries/components/include/: base_view.hpp  board_view.h  click_detector.h  config.h  geometry_visitor.h  paint_config.h  painter.h  painter.hpp
libraries/components/src/: base_view.cpp  board_view.cpp  click_detector.cpp  paint_config.cpp  painter.cpp
libraries/configs/: CMakeLists.txt
libraries/configs/include/: config.h  paint_config.h
libraries/configs/src/: config.cpp  paint_config.cpp
libraries/engine/: CMakeLists.txt
libraries/engine/include/: area.h  engine.h  player.h  point.h  round_manager.hpp  ship.h
libraries/engine/src/: area.cpp  engine.cpp  player.cpp  point.cpp  round_manager.cpp  ship.cpp
libraries/logger/: CMakeLists.txt
libraries/logger/include/: logger.h
libraries/logger/src/: logger.cpp
libraries/network/: CMakeLists.txt
libraries/network/include/: network.h  network_actions.hpp
libraries/network/src/: network.cpp  network_actions.cpp
libraries/patterns/: CMakeLists.txt
libraries/patterns/include/: singleton.hpp  visitor.hpp
libraries/patterns/src/: singleton.cpp  visitor.cpp
libraries/visitors/: CMakeLists.txt
libraries/visitors/include/: click_visitor.h  geometry_visitor.h  init_visitor.h
libraries/visitors/src/: click_visitor.cpp  geometry_visitor.cpp  init_visitor.cpp  paint_visitor.cpp
test/: CMakeLists.txt
test/include/: testbase.h
test/src/: area_tests.cpp  engine_tests.cpp  point_tests.cpp  round_manager_tests.cpp  ship_tests.cpp  testbase.cpp
