# MACRO(SUBDIRLIST result curdir)
# 	FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
# 	SET(dirlist "")
# 	FOREACH(child ${children})
# 		IF(IS_DIRECTORY ${curdir}/${child})
# 			LIST(APPEND dirlist ${child})
# 		ENDIF()
# 	ENDFOREACH()
# 	SET(${result} ${dirlist})
# ENDMACRO()

# SUBDIRLIST(SUBDIRS ${MY_CURRENT_DIR})

# foreach(subdir ${SUBDIRS})
# 	add_subdirectory(subdir)
# endforeach(subdir ${SUBDIRS})